--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap" rel="stylesheet">
-    <link href="reset.css" rel="stylesheet">
-    <link href="style.css?ver=1" rel="stylesheet">
+    <link href="reset.css?ver=5" rel="stylesheet">
+    <link href="style.css?ver=5" rel="stylesheet">
   </head>
   <body>
     <main>
